functional requirement added

--- a/literatur/literatur.tex
+++ b/literatur/literatur.tex
@@ -36,3 +36,9 @@
 
 \nocite{googleDirecAPI}
 \nocite{rpi3}
+\nocite{mvc}
+\nocite{mvp}
+\nocite{mapbox}
+\nocite{raspbien}
+\nocite{androidThings}
+\nocite{Martinfowler2014}
