Added Archtecture Design pattern

--- a/thesis3.tex
+++ b/thesis3.tex
@@ -54,7 +54,7 @@
 %--------------------------------------------------------------------------------------------------- 
 % Danksagung  
 %---------------------------------------------------------------------------------------------------	
-	\input{standard/danke}  																							
+	%\input{standard/danke}  																							
 
 %--------------------------------------------------------------------------------------------------- 
 % Verzeichnisse
