--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -88,4 +88,12 @@ title = {{MVP: Model-View-Presenter The Taligent Programming Model for C++ and J
 url = {http://www.wildcrest.com/Potel/Portfolio/mvp.pdf}
 }
 
+@misc{AdamCarlson,
+author = {{Adam Carlson}},
+title = {{Coupling and Cohesion}},
+howpublished =  "[Online] \url{https://courses.cs.washington.edu/courses/cse403/96sp/coupling-cohesion.html}",
+urldate = {2017-12-28}
+}
+
+
 % End of reference list -----------------------------------------------------------------
