added susbtituion section

--- a/einstellungen/java_listing.tex
+++ b/einstellungen/java_listing.tex
@@ -1,5 +1,5 @@
 %---------------------------------------------------------------------------------------------------
-% Einstellungen von Listings (von Lars Mählmann)
+% Einstellungen von Listings (von Lars Mï¿½hlmann)
 %---------------------------------------------------------------------------------------------------
 \lstset{language=Java,									% Die verwendete Programmiersprache
   escapeinside={(*@}{@*)},
