DI section added

--- a/thesis3.tex
+++ b/thesis3.tex
@@ -88,6 +88,7 @@
   \bibliography{literatur/literatur}      														% reference list
   \input{literatur/literatur}																				%add the non refeenced papers or literature which are as well important for the thesis!
 
+  \input{appendix/appendix.tex}
 %---------------------------------------------------------------------------------------------------	
 % appendix
 %---------------------------------------------------------------------------------------------------	
