Google API implmentation

--- a/appendix/retrofit.tex
+++ b/appendix/retrofit.tex
@@ -1,7 +1,7 @@
 \newpage
         \section{RetroFit configuration}
         \begin{lstlisting}[
-            caption={Android studio gradle file example},
+            caption={Retrofit Configuration},
             label={code:retrofitConfig},
             language=java
             ]
