--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -2,6 +2,8 @@
     \input{appendix/androidthings.tex}
     \input{appendix/dagger.tex}
     \input{appendix/retrofit.tex}    
+    \input{appendix/googleAPIService.tex}    
+    \input{appendix/AsyncUtil.tex}    
         
     
 
