--- a/appendix/googleAPIService.tex
+++ b/appendix/googleAPIService.tex
@@ -74,3 +74,10 @@
 
     }
 \end{lstlisting}    
+
+
+\begin{figure}[htbp!]
+    \centering \includegraphics[scale=0.75]{grafiken/seqDigGoogleAPI.jpg}
+    \caption{Sequence Diagram: Describing the functonality of the Google API service}
+    \label{fig:directionServiceSeqDiagram}
+\end{figure}
