testing and validation

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -4,6 +4,7 @@
     \input{appendix/retrofit.tex}    
     \input{appendix/googleAPIService.tex}    
     \input{appendix/AsyncUtil.tex}    
+    \input{appendix/NetworkCheckUtil.tex}    
         
     
 
