--- a/appendix/retrofit.tex
+++ b/appendix/retrofit.tex
@@ -34,24 +34,47 @@
                     @Override
                     public okhttp3.Response intercept(Chain chain) 
                     throws IOException {
-                        Request request = chain.request();
-                        okhttp3.Response response = chain.proceed(request);
+                        @Override
+                    public okhttp3.Response intercept(Chain chain) throws 
+                    IOException {
+                        try {
+                            Request request = chain.request();
+                            okhttp3.Response response = chain.proceed
+                            (request);
 
-                        // TODO: Put related status 
-                        //code that is needed to be handled
+                            // TODO: Put related status 
+                            code that is needed to be handled
 
-                        //This code is a sucess
-                        if (response.code() == 200) {
+                            //This code is a sucess
+                            if (response.code() == 200) {
 
 
-                            //TODO: This must be discussed
-                            // what is to be done when 
-                            //an error occurs
+                                //TODO: This must be discussed 
+                                what is to be done when an error occurs
+
+                                return response;
+                            }
+
+                            //Catch all errors here
+                            if (response.code() >= 400) {
+
+
+                                //TODO: This must be discussed 
+                                what is to be done when an error occurs
+
+                                return null;
+                            }
 
                             return response;
+
+                        } catch(SocketTimeoutException exception){
+                            //TODO: Decide what to do when 
+                            a timeout occurs
+                            return null;
                         }
 
-                        return response;
+                    }
+                })
                     }
                 })
                 .build();
@@ -79,12 +102,12 @@
         * A Suggestion for error handling is get the query 
         * parameters from the response and the give it back to 
         * the UI so that they can check it
-        * Must be discussed
+        * Must be discussed. if error null is returned.
         */
         if(!response.body().getStatus().equals("OK")) {
             return response.body();
         }
-        return response.body();
+        return null;
         
     }
 
