--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -5,6 +5,8 @@
     \input{appendix/googleAPIService.tex}    
     \input{appendix/AsyncUtil.tex}    
     \input{appendix/NetworkCheckUtil.tex}    
+    \input{appendix/navigationManager.tex}    
+    \input{appendix/xmlReader.tex}    
         
     
 
