--- a/thesis3.tex
+++ b/thesis3.tex
@@ -12,12 +12,11 @@
 %--------------------------------------------------------------------------------------------------- 
 %Title page
 %---------------------------------------------------------------------------------------------------
-	\createCoverAndTitlePage{Bachelor}																			%type of thesis
-													{thesis}																			% Bezeichnung arbeit oder thesis 
-													{Martin Mustermann}														% Author
-													{Development and  realisation of a business application
-													 using object oriented C++ programming and client-server
-													 architecture}											  % Titel				
+	\createCoverAndTitlePage{CJ2 Project }																			%type of thesis
+													{Report }																			% Bezeichnung arbeit oder thesis 
+													{Prannoy Mulmi}														% Author
+													{Development of a route calculation
+													module for navigation }											  % Titel				
 													{Information Engineering}						% Studydegreecourse
 													{Prof.\ Dr.\ rer.\ nat.\ Martin Zapf}					% supervisor
 													{Prof.\ Dr.\-Ing.\ Armin Kluge}								% second examiner
