first draft readup till Single Responsibility principle

--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -74,7 +74,7 @@ urldate = {2017-12-26}
 }
 
 @article{Hotop2015,
-author = {Hotop, Hans-J{\"{u}}rgen},
+author = {Hotop, Hans-J{\"{u}}rgen HAW Hamburg},
 title = {{Software Engineering Contents (main subjects)}},
 url = {http://users.etech.haw-hamburg.de/users/Hotop/Java/SE1scriptss2015.pdf},
 year = {2015}
@@ -94,6 +94,58 @@ title = {{Coupling and Cohesion}},
 howpublished =  "[Online] \url{https://courses.cs.washington.edu/courses/cse403/96sp/coupling-cohesion.html}",
 urldate = {2017-12-28}
 }
+
+@misc{Gradle,
+author = {Gradle},
+title = {{Gradle Build Tool}},
+howpublished = "[Online] \url{https://gradle.org/}",
+urldate = {2018-01-08}
+}
+
+@misc{GoogleIO,
+author = {Google},
+title = {{Peripheral I/O | Android Things}},
+howpublished = "[Online] \url{https://developer.android.com/things/sdk/pio/index.html}",
+urldate = {2018-01-08}
+}
+
+@misc{GoogleStart,
+author = {Google},
+title = {{Building Your First App | Android Developers}},
+howpublished = "[Online] \url{https://developer.android.com/training/basics/firstapp/index.html}",
+urldate = {2018-01-08}
+}
+
+@misc{GoogleWebServices,
+author = {Google},
+title = {{Google Maps Web Service APIs  |  Google Developers}},
+howpublished = "[Online] \url{https://developers.google.com/maps/web-services/}",
+urldate = {2018-01-08}
+}
+
+
+@misc{MicrosoftMVC,
+author = {Microsoft},
+title = {{Introduction to ASP.NET Core | Microsoft Docs}},
+howpublished = "[Online] \url{https://docs.microsoft.com/en-us/aspnet/core/{\#}build-web-apis-and-web-ui-using-aspnet-core-mvc}",
+urldate = {2018-01-08}
+}
+
+@misc{JavaSpring,
+author = {{Java Spring}},
+title = {{Web on Servlet Stack}},
+howpublished = "[Online] \url{https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html}",
+urldate = {2018-01-08}
+}
+
+@misc{TinMegali2016,
+author = {{Tin Megali}},
+title = {{How to Adopt Model View Presenter on Android}},
+howpublished = "[Online] \url{https://code.tutsplus.com/tutorials/how-to-adopt-model-view-presenter-on-android--cms-26206}",
+urldate = {2018-01-08},
+year = {2016}
+}
+
 
 
 % End of reference list -----------------------------------------------------------------
