--- a/literatur/literatur.tex
+++ b/literatur/literatur.tex
@@ -47,3 +47,10 @@
 \nocite{Hotop2015}
 \nocite{Potel}
 \nocite{AdamCarlson}
+\nocite{Gradle}
+\nocite{GoogleIO}
+\nocite{GoogleStart}
+\nocite{GoogleWebServices}
+\nocite{MicrosoftMVC}
+\nocite{JavaSpring}
+\nocite{TinMegali2016}
