--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -14,7 +14,7 @@
 
 
 @misc{googleDirecAPI,
-author	= "google",
+author	= "Google",
 title	= "Google Direction API",
 howpublished="[Online] \url{https://developers.google.com/maps/documentation/directions/}"
 }
@@ -74,8 +74,8 @@ urldate = {2017-12-26}
 }
 
 @article{Hotop2015,
-author = {Hotop, Hans-J{\"{u}}rgen HAW Hamburg},
-title = {{Software Engineering Contents (main subjects)}},
+author = {Hotop, Hans-J{\"{u}}rgen},
+title = {{Software Engineering Contents (main subjects) HAW Hamburg}},
 url = {http://users.etech.haw-hamburg.de/users/Hotop/Java/SE1scriptss2015.pdf},
 year = {2015}
 }
@@ -145,6 +145,45 @@ howpublished = "[Online] \url{https://code.tutsplus.com/tutorials/how-to-adopt-m
 urldate = {2018-01-08},
 year = {2016}
 }
+
+@misc{Codepath,
+author = {Codepath},
+title = {{Creating Custom Listeners | CodePath Android Cliffnotes}},
+howpublished = "[Online] \url{https://guides.codepath.com/android/Creating-Custom-Listeners}",
+urldate = {2018-01-11}
+}
+
+@misc{Pivotal,
+author = {Pivotal, Spring},
+title = {{Understanding POJO}},
+howpublished = "[Online] \url{https://spring.io/understanding/POJO}",
+urldate = {2018-01-11}
+}
+
+@misc{GoogleAsync,
+author = {Google},
+title = {{AsyncTask | Android Developers}},
+howpublished = "[Online] \url{https://developer.android.com/reference/android/os/AsyncTask.html}",
+urldate = {2018-01-11}
+}
+
+@misc{Square,
+author = {Square},
+title = {{Retrofit}},
+howpublished = "[Online] \url{http://square.github.io/retrofit/}",
+urldate = {2018-01-11}
+}
+
+@misc{SquareDagger,
+author = {Square},
+title = {{Dagger}},
+howpublished = "[Online] \url{http://square.github.io/dagger/}",
+urldate = {2018-01-11}
+}
+
+
+
+
 
 
 
