--- a/literatur/literatur.tex
+++ b/literatur/literatur.tex
@@ -54,3 +54,8 @@
 \nocite{MicrosoftMVC}
 \nocite{JavaSpring}
 \nocite{TinMegali2016}
+\nocite{Codepath}
+\nocite{Pivotal}
+\nocite{GoogleAsync}
+\nocite{Square}
+\nocite{SquareDagger}
