--- a/thesis3.tex
+++ b/thesis3.tex
@@ -65,6 +65,7 @@
 %--------------------------------------------------------------------------------------------------- 
 % First part of the thsis:
 %---------------------------------------------------------------------------------------------------
+	\input{abbreviations/abbvr.tex}
 	\input{chapter/introduction/introduction.tex}
 	
 %---------------------------------------------------------------------------------------------------	
