--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -181,10 +181,11 @@ howpublished = "[Online] \url{http://square.github.io/dagger/}",
 urldate = {2018-01-11}
 }
 
-
-
-
-
-
+@article{AkhileshGoveeshSEECHURN,
+author = {{Akhilesh Goveesh SEECHURN}},
+number = {2017-09-28},
+title = {{Software development and best coding practices | SUPINFO, {\'{E}}cole Sup{\'{e}}rieure d'Informatique}},
+howpublished = "[Online] \url{https://www.supinfo.com/articles/single/5724-software-development-and-best-coding-practices}"
+}
 
 % End of reference list -----------------------------------------------------------------
