--- a/appendix/dagger.tex
+++ b/appendix/dagger.tex
@@ -11,8 +11,7 @@
         
     \begin{figure}[htbp!]
         \centering \includegraphics[scale=0.85]{grafiken/di.jpg}
-        \caption{Dependency Inversion example
-        \href{https://upload.wikimedia.org/wikipedia/commons/9/96/Dependency_inversion.png}{ImageRef}}
+        \caption{Dependency Inversion example \cite{AkhileshGoveeshSEECHURN}}
         \label{fig:DIExample}
     \end{figure}
 
