--- a/thesis3.tex
+++ b/thesis3.tex
@@ -15,8 +15,8 @@
 	\createCoverAndTitlePage{CJ2 Project }																			%type of thesis
 													{Report }																			% Bezeichnung arbeit oder thesis 
 													{Prannoy Mulmi}														% Author
-													{Development of a route calculation
-													module for navigation }											  % Titel				
+													{Integration of Direction API for route calculation in 
+													the Navigation Module}											  % Titel				
 													{Information Engineering}						% Studydegreecourse
 													{Prof.\ Dr.\ rer.\ nat.\ Martin Zapf}					% supervisor
 													{Prof.\ Dr.\-Ing.\ Armin Kluge}								% second examiner
